Add multi board support
